--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Portfolio</title>
-  <link href="%PUBLIC_URL%/static/css/main.689082ba.css" rel="stylesheet">
+  <link href="/static/css/main.689082ba.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
   <div id="root"></div>
